spring-boot-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Ensure SSL redirection
spec:
  ingressClassName: nginx  # Explicitly use the NGINX Ingress Class
  tls:
    - hosts:
        - interns.labcerebrone.com  # Your domain name
      secretName: interns-tls       # The name of the secret containing the TLS certificate
  rules:
    - host: interns.labcerebrone.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-service  # Ensure this matches your service name
                port:
                  number: 8080          # Ensure this matches the service port
